k8s/mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: items
spec: 
  host: items
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        maxRetries: 1
        http2MaxRequests: 1
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
  subsets:
    - name: prod
      labels:
        scope: prod
    - name: omega
      labels:
        scope: omega
    - name: beta
      labels:
        scope: beta
