k8s/mesh/items-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: items-vs-from-gw
spec:
  hosts:
  - "mesh"
  - "estoque.clazz.dev"
  gateways:
  - estoque-gateway
  http:
    # - match:
    #   - headers:
    #       x-scope:
    #         exact: "beta"
    #   route:
    #   - destination:
    #       host: items
    #       subset: beta
    - route:
      - destination:
          host: items
          subset: beta
        weight: 100
      retries:
        attempts: 2
        retryOn: 5xx
        # perTryTimeout: 100ms


        
      # mirror:
      #   host: items
      #   subset: beta
